# NDDVR

./: .gitignore  MANIFEST.in  README.md  meson.build  pyproject.toml
examples/2DH0/: 2D_HO.py
examples/2D_tests/: mem_algorithms.py  test_algorithms.py  test_sine_dvr.py  test_variable_grids.py  time_algorithms.py
examples/2D_tests/outputs/harmonic/31x31/P0/: input_files.txt
examples/2D_tests/outputs/harmonic/31x31/P1/: input_files.txt
examples/2D_tests/outputs/harmonic/31x31/P10/: input_files.txt
examples/2D_tests/outputs/harmonic/31x31/P4/: input_files.txt
examples/2D_tests/outputs/harmonic/31x31/P5/: input_files.txt
examples/2D_tests/outputs/harmonic/31x31/P6/: input_files.txt
examples/2D_tests/timings/: 131_timings.tab  A116_timings.tab  A129_timings.tab  cm_dvr_timings.tab
examples/2D_tests/timings/101x101/: input_files.txt
examples/2D_tests/timings/31x31/: input_files.txt
examples/2D_tests/timings/41x41/: input_files.txt
examples/2D_tests/timings/51x51/: input_files.txt
examples/2D_tests/timings/61x61/: input_files.txt
examples/2D_tests/timings/71x71/: input_files.txt
examples/2D_tests/timings/81x81/: input_files.txt
examples/2D_tests/timings/91x91/: input_files.txt
examples/3D_tests/: mem_algorithms.py  test_algorithms.py  time_algorithms.py
examples/3D_tests/outputs/memory_consumption/: 131_memory.tab  cm_dvr_memory.tab
examples/3D_tests/outputs/memory_consumption/15x15x15/: input_files.txt
examples/3D_tests/outputs/memory_consumption/21x21x21/: input_files.txt
examples/3D_tests/outputs/memory_consumption/25x25x25/: input_files.txt
examples/3D_tests/outputs/memory_consumption/35x35x35/: input_files.txt
examples/3D_tests/outputs/memory_consumption/41x41x41/: input_files.txt
examples/H2O/: potfit.py  potfit_partschwenke.py  ps_test.py  test_algorithms.py
examples/H2O/partridge_schwenke/: potfit.py  ps_test.py
examples/H2O/partridge_schwenke/1D_cuts/: h2o_nm0.xyz  h2o_nm1.xyz  h2o_nm2.xyz
examples/ND_tests/: mem_algorithms.py  time_algorithms.py
examples/NH3/: potfit.py  ps_test.py  sine_dvr.py
examples/NO2/: potfit.py  ps_test.py
examples/SO2/: potfit.py  ps_test.py
examples/nm_test/: test_algorithms.py
examples/nm_test/asym/: energies_raw.txt
examples/nm_test/bend/: energies_raw.txt
examples/nm_test/sym/: energies_raw.txt
src/: __init__.py  algorithm_timings.py  dvr.py  exact_solvers.py  grids.py  h2opes.f  h2opes.pyf  nh3pes.f  old_algorithms.py  operators.py  plotting.py  potential_functions.py  potentials.py  synthesised_algorithms.py  synthesised_solvers.py  transforms.py  wf_utils.py
(+35 files in other folders)
